# Author: Elena Ceseracciu

# Save path to include directory for "internal" usage
set(RootSolvers_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}" CACHE INTERNAL "Include directory for RootSolvers library")


# Install
#install(FILES ${_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}) #should add namespace
